refactor(client): introduce bluesky-client-common module and update configurations across services